--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "expect": "^1.20.2",
     "mocha": "^3.5.0",
+    "scribbletune": "^0.10.1",
     "supertest": "^3.0.0"
   }
 }
